--- a/.gitignore
+++ b/.gitignore
@@ -53,8 +53,8 @@ release
 /Doc
 
 # MDK-ARM (Keil)
-*.scvd
-*.uvoptx
-/obj
-/DebugConfig
-/testPin-C011F6.uvguix.diaferia
+/MDK-ARM/*.scvd
+/MDK-ARM/obj
+/MDK-ARM/testPin-C011F6.uvguix.diaferia
+/MDK-ARM/*.uvoptx
+/MDK-ARM/DebugConfig
