-enable huart1 (VCP_USART1_TX remap to PA9, VCP_USART1_RX remap to PA10) -add uart_trace.c file -write single time into VCP

--- a/MDK-ARM/testPin-C011F6.uvprojx
+++ b/MDK-ARM/testPin-C011F6.uvprojx
@@ -207,7 +207,7 @@
             <Ro2Chk>0</Ro2Chk>
             <Ro3Chk>0</Ro3Chk>
             <Ir1Chk>1</Ir1Chk>
-            <Ir2Chk>1</Ir2Chk>
+            <Ir2Chk>0</Ir2Chk>
             <Ra1Chk>0</Ra1Chk>
             <Ra2Chk>0</Ra2Chk>
             <Ra3Chk>0</Ra3Chk>
@@ -329,7 +329,7 @@
             <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>5</v6Lang>
+            <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
@@ -517,6 +517,16 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>Drivers/VL503x</GroupName>
+          <Files>
+            <File>
+              <FileName>uart_trace.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\uart_trace.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::CMSIS</GroupName>
         </Group>
       </Groups>
@@ -535,5 +545,14 @@
     </components>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>testPin-C011F6</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
