Add vl503x API libraries with 0 errors included stm32c0xx_hal.h into platform files
TODO:
- adapt api to current pinout (add BSP files)

--- a/MDK-ARM/testPin-C011F6.uvprojx
+++ b/MDK-ARM/testPin-C011F6.uvprojx
@@ -524,6 +524,101 @@
               <FileType>1</FileType>
               <FilePath>..\Drivers\VL503x\uart_trace.c</FilePath>
             </File>
+            <File>
+              <FileName>vl53l0x_api.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_calibration.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_calibration.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_calibration.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_calibration.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_core.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_core.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_core.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_core.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_ranging.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_ranging.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_ranging.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_ranging.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_strings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_strings.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_api_strings.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_api_strings.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_def.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_def.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_device.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_device.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_interrupt_threshold_settings.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_interrupt_threshold_settings.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_platform_log.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_platform_log.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_platform_log.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_platform_log.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_tuning.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_tuning.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_types.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_types.h</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_platform.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_platform.c</FilePath>
+            </File>
+            <File>
+              <FileName>vl53l0x_platform.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\VL503x\vl53l0x_platform.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
